cmake_minimum_required(VERSION 3.25)
project(PROG2400_lectures)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_FLAGS "-static")

add_executable(hello_world hello_world/main.cpp)
add_executable(echo echo/main.cpp)
add_executable(command_line command_line/main.cpp)
add_executable(command_parser command_parser/main.cpp)
add_executable(pointers pointers/main.cpp)
add_executable(vectors vectors/main.cpp)
add_executable(linked_list linked_list/main.cpp)
add_executable(smart_ptr smart_ptr/main.cpp)
add_executable(queues queues/main.cpp)
add_executable(stacks stacks/main.cpp)
add_executable(palindrome palindrome/main.cpp)
add_executable(recursion recursion/main.cpp)
add_executable(filesystem filesystem/main.cpp)
add_executable(binary_search_tree binary_search_tree/main.cpp)